brand-logo font size on mobile fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,3 +115,9 @@ main {
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 500px) {
+  .brand-logo {
+    font-size: 1.5rem !important;
+  }
+}
